bug TDI-28348 fixed : Download jar click cancel the jar are incomplete but when use the component no warning about install jar .
git-svn-id: http://talendforge.org/svn/tos/trunk@111869 f6f1c999-d317-4740-80b0-e6d1abc6f99e